--- a/AdminDashboard.Web.Mvc/Views/web.config
+++ b/AdminDashboard.Web.Mvc/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="SecurityAdmin.Web.Mvc" />
+        <add namespace="AdminDashboard.Web.Mvc" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
